// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/lib/inflateSchema.js basic schemas 1`] = `
Object {
  "attributes": Array [],
  "configuration": Object {},
  "id": "12345",
  "identifiers": Object {
    "plural": Object {
      "camel": "users",
      "kebab": "users",
      "label": "Users",
      "pascal": "Users",
      "snake": "users",
    },
    "singular": Object {
      "camel": "user",
      "kebab": "user",
      "label": "User",
      "pascal": "User",
      "snake": "user",
    },
  },
  "references": Array [],
  "relations": Array [],
}
`;

exports[`/lib/inflateSchemas.js basic schemas 1`] = `
Array [
  Object {
    "attributes": Array [],
    "configuration": Object {},
    "id": "12345",
    "identifiers": Object {
      "plural": Object {
        "camel": "users",
        "kebab": "users",
        "label": "Users",
        "pascal": "Users",
        "snake": "users",
      },
      "singular": Object {
        "camel": "user",
        "kebab": "user",
        "label": "User",
        "pascal": "User",
        "snake": "user",
      },
    },
    "references": Array [],
    "relations": Array [],
  },
  Object {
    "attributes": Array [
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "name-attr",
        "identifiers": Object {
          "camel": "name",
          "kebab": "name",
          "label": "Name",
          "pascal": "Name",
          "snake": "name",
        },
        "internalNote": "the name of the user",
        "locked": false,
        "source": "user",
      },
      Object {
        "addons": Object {
          "required": true,
        },
        "datatype": "STRING",
        "defaultValue": null,
        "id": "email-attr",
        "identifiers": Object {
          "camel": "email",
          "kebab": "email",
          "label": "Email",
          "pascal": "Email",
          "snake": "email",
        },
        "internalNote": "the email of the user",
        "locked": false,
        "source": "user",
      },
    ],
    "configuration": Object {},
    "id": "45678",
    "identifiers": Object {
      "plural": Object {
        "camel": "movies",
        "kebab": "movies",
        "label": "Movies",
        "pascal": "Movies",
        "snake": "movies",
      },
      "singular": Object {
        "camel": "movie",
        "kebab": "movie",
        "label": "Movie",
        "pascal": "Movie",
        "snake": "movie",
      },
    },
    "references": Array [],
    "relations": Array [],
  },
]
`;
